fixed issue with the css bleeding over

--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -35,7 +35,6 @@
 }
 .inputs {
   height: 40%;
-  margin-top: 10%;
   color: #fee8b0;
   & input {
     height: 20px;
@@ -69,7 +68,7 @@
   height: 90%;
 }
 
-.form-group {
+.form-group-login {
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
@@ -78,19 +77,21 @@
   }
 }
 
-label {
+.form-label {
   font-weight: bold;
 }
 
-input[type="email"],
-input[type="password"] {
-  padding: 8px;
-  border-radius: 4px;
-  border: 1px solid #ccc;
-  font-size: 16px;
+.form-group-login {
+  & input {
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    font-size: 16px;
+    padding: 8px;
+  }
 }
 
-button[type="submit"] {
+.submit-button {
+  margin-top: 10px;
   padding: 10px 20px;
   background-color: #f6f1ee;
   color: #607056;
@@ -100,7 +101,7 @@ button[type="submit"] {
   cursor: pointer;
 }
 
-button[type="submit"]:hover {
+.submit-button:hover {
   color: white;
   background-color: #f97b22;
 }
@@ -110,20 +111,19 @@ button[type="submit"]:hover {
   align-items: center;
 }
 .checkbox-group {
+  padding: 2px;
   display: flex;
   flex-direction: row;
   align-items: center;
 }
 
-.checkbox-group input[type="checkbox"] {
+.checkbox-group input {
   margin-right: 8px;
   width: 10%;
   outline: none;
 }
-.checkbox-group input[type="checkbox"]:checked {
-  color: #607056;
-}
-.checkbox-group label {
+
+.checkbox-group .form-label {
   font-size: 14px;
   cursor: pointer;
 }
